--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -100,7 +100,7 @@ jobs:
         uses: mattermost/actions/plugin-ci/build@f8216c3fd23634df402f02b40dbc1a44a1663208
 
   delivery:
-    if: ${{ github.repository_owner == 'mattermost' && github.event_name != 'schedule' && (github.ref_name  == 'master' || github.ref_name  == 'main') }}
+    if: ${{ github.repository_owner == 'mattermost' && github.event_name != 'schedule' }}
     runs-on: ubuntu-latest
     needs: [lint, test, build]
     steps:
@@ -109,20 +109,3 @@ jobs:
         with:
           name: dist
           path: dist
-
-      - name: ci/prepare-artifact
-        run: mv *.tar.gz ${GITHUB_REPOSITORY#*/}-ci.tar.gz
-        working-directory: dist
-
-      - name: ci/aws-configure
-        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a #v4.0.1
-        with:
-          aws-region: ${{ inputs.region }}
-          aws-access-key-id: ${{ secrets.PLUGIN_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.PLUGIN_AWS_SECRET_ACCESS_KEY }}
-
-      - name: ci/artifact-upload
-        shell: bash
-        run: |
-          aws s3 cp ${{ inputs.artifacts }} s3://${{ inputs.bucket }} --acl public-read --cache-control no-cache
-        working-directory: dist
