--- a/.github/workflows/plugin-cd.yml
+++ b/.github/workflows/plugin-cd.yml
@@ -29,13 +29,6 @@ on:
         required: false
         type: string
 
-      skip-aws-upload:
-        default: false
-        description: |
-          Skip the AWS upload step
-        required: false
-        type: boolean
-
 permissions:
   contents: read
 
@@ -62,7 +55,7 @@ jobs:
         uses: mattermost/actions/plugin-ci/build@cd879ea9c64cc3e26a75a042d1c5066be28130a6
 
   release-s3:
-    if: startsWith(github.ref, 'refs/tags/v') && github.repository_owner == 'mattermost' && !inputs.skip-aws-upload
+    if: startsWith(github.ref, 'refs/tags/v') && github.repository_owner == 'mattermost'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
