--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -62,6 +62,9 @@ jobs:
           golangci-lint-version: ${{ inputs.golangci-lint-version }}
           golang-version: ${{ inputs.golang-version }}
 
+      - name: Install mage
+        run: go install github.com/magefile/mage@latest
+
       - name: ci/lint
         uses: mattermost/actions/plugin-ci/lint@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
 
@@ -79,6 +82,9 @@ jobs:
         with:
           golang-version: ${{ inputs.golang-version }}
 
+      - name: Install mage
+        run: go install github.com/magefile/mage@latest
+
       - name: ci/test
         uses: mattermost/actions/plugin-ci/test@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
 
@@ -95,6 +101,9 @@ jobs:
         uses: mattermost/actions/plugin-ci/setup@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
         with:
           golang-version: ${{ inputs.golang-version }}
+
+      - name: Install mage
+        run: go install github.com/magefile/mage@latest
 
       - name: ci/build
         uses: mattermost/actions/plugin-ci/build@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
