feat: add input for mage version

--- a/.github/workflows/plugin-ci.yml
+++ b/.github/workflows/plugin-ci.yml
@@ -29,6 +29,13 @@ on:
         required: false
         type: string
 
+      mage-version:
+        default: "v1.15.0"
+        description: |
+          Set the version for mage
+        required: false
+        type: string
+
       region:
         default: us-east-1
         description: |
@@ -63,7 +70,7 @@ jobs:
           golang-version: ${{ inputs.golang-version }}
 
       - name: Install mage
-        run: go install github.com/magefile/mage@latest
+        run: go install github.com/magefile/mage@${{ inputs.mage-version }}
 
       - name: ci/lint
         uses: mattermost/actions/plugin-ci/lint@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
@@ -83,7 +90,7 @@ jobs:
           golang-version: ${{ inputs.golang-version }}
 
       - name: Install mage
-        run: go install github.com/magefile/mage@latest
+        run: go install github.com/magefile/mage@${{ inputs.mage-version }}
 
       - name: ci/test
         uses: mattermost/actions/plugin-ci/test@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
@@ -103,7 +110,7 @@ jobs:
           golang-version: ${{ inputs.golang-version }}
 
       - name: Install mage
-        run: go install github.com/magefile/mage@latest
+        run: go install github.com/magefile/mage@${{ inputs.mage-version }}
 
       - name: ci/build
         uses: mattermost/actions/plugin-ci/build@d5174b860704729f4c14ef8489ae075742bfa08a # v1.0.0
