--- a/.github/workflows/plugin-cd.yml
+++ b/.github/workflows/plugin-cd.yml
@@ -22,6 +22,13 @@ on:
         required: false
         type: string
 
+      mage-version:
+        default: "v1.15.0"
+        description: |
+          Set the version for mage
+        required: false
+        type: string
+
       region:
         default: us-east-1
         description: |
@@ -48,7 +55,7 @@ jobs:
           golang-version: ${{ inputs.golang-version }}
 
       - name: Install mage
-        run: go install github.com/magefile/mage@latest
+        run: go install github.com/magefile/mage@${{ inputs.mage-version }}
 
       - name: ci/build
         env:
