--- a/.github/workflows/snyk-sbom.yml
+++ b/.github/workflows/snyk-sbom.yml
@@ -23,6 +23,22 @@ jobs:
     steps:
       - name: sbom/checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${RELEASE_TAG}
+
+      - name: sbom/validate-tag
+        run: |
+          if ! git rev-parse --verify "refs/tags/${RELEASE_TAG}" >/dev/null 2>&1; then
+            echo "Error: Tag ${RELEASE_TAG} does not exist"
+            exit 1
+          fi
+          
+          if ! gh release view "${RELEASE_TAG}" >/dev/null 2>&1; then
+            echo "Error: Tag ${RELEASE_TAG} is not a valid release"
+            exit 1
+          fi
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: sbom/setup-node
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
