--- a/.github/workflows/plugin-dist-pr.yml
+++ b/.github/workflows/plugin-dist-pr.yml
@@ -3,11 +3,11 @@ name: Plugin PR Distribution Build
 on:
   workflow_call:
     inputs:
-      go-version:
-        description: "Go version used to build the plugin"
+      go-version-file:
+        description: "Path to the file that declares the Go version"
         type: string
         required: false
-        default: "${{ vars.PLUGIN_GO_VERSION || '1.22.6' }}"
+        default: go.mod
       dist-target:
         description: "Make target that produces the CI distribution artifact"
         type: string
@@ -32,9 +32,6 @@ permissions:
   contents: read
   id-token: write
 
-env:
-  GO_VERSION: ${{ inputs.go-version }}
-
 jobs:
   dist:
     runs-on: ubuntu-22.04
@@ -47,7 +44,7 @@ jobs:
       - name: ci/setup-go
         uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version-file: ${{ inputs.go-version-file }}
           cache: false
 
       - name: ci/get-short-sha
